# semantic-kernel-workshop

./: README.md  pyproject.toml  start-here.ipynb
.devcontainer/: devcontainer.json
01-intro-to-semantic-kernel/: 01-intro.ipynb
02-semantic-kernel-agents/: 02.2-agents-chats.ipynb
03-semantic-kernel-mcp/: 3.1-sk-with-mcp.ipynb
04-process-framework/: 04.1-intro-to-processes.ipynb
05-teamviewer/: data_model.py
playground/: start.sh
playground/frontend/: package-lock.json  package.json
utils/: __init__.py  eval_models.py  evaluation.py  models.py
utils/telemetry/: __init__.py  sk_tracing.py
